--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
     "mongodb": "^3.0.10",
+    "mongoose": "^5.1.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
   },
