--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Yoany",
   "license": "ISC",
   "dependencies": {
+    "MD5": "^1.3.0",
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.5.0",
